trying to fix box-shadow not appearing on inputs on ios

--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -35,6 +35,7 @@
       color: var(--main-text-color);
       margin-bottom: 18px;
       border: none;
+      -webkit-appearance: none;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     }
 
